[gd_scene load_steps=3 format=3 uid="uid://k0sk4kie32hf"]

[ext_resource type="Script" path="res://scenes/equipment/weapons/aoe/scalpel/scalpel_weapon.gd" id="1_dom3c"]
[ext_resource type="PackedScene" uid="uid://ced3hv206kfco" path="res://scenes/equipment/weapons/aoe/scalpel/ScalpelEffect.tscn" id="2_5fqde"]

[node name="ScalpelWeapon" type="Node2D" groups=["aoe"]]
script = ExtResource("1_dom3c")

[node name="EffectRight" parent="." groups=["effect"] instance=ExtResource("2_5fqde")]

[node name="EffectLeft" parent="." groups=["effect"] instance=ExtResource("2_5fqde")]
rotation = 3.14159

[node name="CooldownTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
